# Proof-of-Impact-Funding-Protocol-PIFP-

./: .gitignore  .tool-versions  README.md  render.yaml
contracts/: Scarb.toml
contracts/.starkli/: pifp_deployer_account.json
contracts/src/: lib.cairo
contracts/tests/: test_contract.cairo
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectWallet.tsx  CreateProjectForm.tsx  Hero.tsx  Navbar.tsx  ProjectCard.tsx  ProjectList.tsx  VerificationForm.tsx
frontend/src/context/: NotificationContext.tsx  SecurityContext.tsx  WalletContext.tsx
frontend/src/lib/: config.ts  hash.ts  projectMetadata.ts  tx.ts
oracle-service/: .env.example  Cargo.toml  wallet_emails.json
oracle-service/bridge/: index.js  package-lock.json  package.json
oracle-service/examples/: check_abi.rs  check_selectors.rs
oracle-service/oracle-service/: wallet_emails.json
oracle-service/scripts/: render-build.sh  render-start.sh
oracle-service/src/: main.rs
