[package]
name = "oracle-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "0.10.0"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
sha2 = "0.10"

